# kaputt

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json  xmake.lua
cmake/: XSEPlugin.cmake
include/: PCH.h
src/: PCH.h  animation.cpp  animation.h  cathub.h  config.h  filter.cpp  filter.h  kaputt.cpp  kaputt.h  kaputtAPI.h  main.cpp  menu.cpp  menu.h  pipeline.cpp  pipeline.h  re.cpp  re.h  rule.cpp  rule.h  rules.cpp  rules.h  tagger.cpp  tagger.h  tasks.cpp  tasks.h  trigger.cpp  trigger.h  utils.cpp  utils.h
